--- a/css/imgSlide.css
+++ b/css/imgSlide.css
@@ -42,11 +42,14 @@ html,body,div,ul,li{ margin:0;padding:0;}
 		display:inline-block;
 		height:25px;
 		line-height: 25px;
-		padding:0 6px;
+		margin:0 3px;
 		font-size:12px;
 		border:1px solid #dedede;
 	}
 	.move_nav li a {
+		display:block;
+		height:100%;
+		padding:0 12px;
 		color:#777;
 		text-decoration:none;
 	}
