--- a/css/imgSlide.css
+++ b/css/imgSlide.css
@@ -1,68 +1,94 @@
+@charset "utf-8";
+
 html,body,div,ul,li{ margin:0;padding:0;}
-	img { border:none;}
-	a:hover , a.active{ color:#69f;}
-	.move_wrap {
-	width:500px;
-	margin:50px 0 0 100px;
-	}
-	.move_con {
+img { border:none;}
+li { list-style:none;}
+a:hover , a.active{ color:#69f;}
+.move_wrap {
+    width:500px;
+    margin:50px 0 0 100px;
+    overflow: hidden;
+}
+
+/*
+ *活动区域class默认
+*/
+.slideMain {
 	position:relative;
 	width:100%;
 	height:350px;
-	padding:2px;
+	margin:-1px;
 	overflow: hidden;
 	border:1px solid #efefef;
-	}
-	.move_con li {
-	position:absolute;
+}
+.slideMain li {
 	width:100%;
-	height:100%;
-	opacity: 0;
-	-webkit-transition:all 0.7s;
-	}
-	.move_con li.active{
-	z-index:1;
-	opacity:1;
-	}
-	.move_con li >a{
+	height:100%;	
+}
+.slideMain li>a{
 	display:block;
 	width:100%;
 	height:100%;
-	}
-	.move_con li img{
+}
+.slideMain li img{
 	width:100%;
 	height:100%;
-	}
-	/*直接跳转按钮*/
-	.move_nav{
-		position:relative;
-		margin-top:20px;
-	}
-	.move_nav li{
-		display:inline-block;
-		height:25px;
-		line-height: 25px;
-		margin:0 3px;
-		font-size:12px;
-		border:1px solid #dedede;
-	}
-	.move_nav li a {
-		display:block;
-		height:100%;
-		padding:0 12px;
-		color:#777;
-		text-decoration:none;
-	}
-	.move_nav li.active a{
-		color:#69f;
-	}
-	.updown{
-		padding:15px 0;
-	}
-	.updown a{
-		padding:8px 20px;
-		border:1px solid #dedede;
-		color:#333;
-		text-decoration:none;
-		font-size:.67em;
-	}
+}
+.move_init li {
+	position:absolute;
+	opacity: 0;
+	-webkit-transition:all 0.7s;
+}
+.move_init li.active{
+	z-index:1;
+	opacity:1;
+}
+
+/*
+ *直接跳转按钮
+ */
+.move_nav{
+	position:relative;
+	margin-top:20px;
+}
+.move_nav li{
+	display:inline-block;
+	height:25px;
+	line-height: 25px;
+	margin:0 3px;
+	font-size:12px;
+	border:1px solid #dedede;
+}
+.move_nav li a {
+	display:block;
+	height:100%;
+	padding:0 12px;
+	color:#777;
+	text-decoration:none;
+}
+.move_nav li.active a { color:#69f; }
+.updown  { padding:15px 0; }
+.updown a{
+	padding:8px 20px;
+	border:1px solid #dedede;
+	color:#333;
+	text-decoration:none;
+	font-size:.67em;
+}
+
+/*
+ *活动区域-效果：左右滑动
+*/
+
+.move_leftRight li {
+    float:left;
+    width:500px;
+}
+
+
+.move_leftRight:after,
+.move_leftRight:before {
+	display: table; content: "";line-height:0;
+}
+.move_leftRight:after { clear:both;}
+.move_leftRight { zoom:1;}
